# diabetese_prediction

./: .replit  ai_recommendations.py  app.py  auth.py  csv_parser.py  database.py  history.py  index.html  model.py  pdf_report.py  pyproject.toml  replit.md
