[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "reportlab>=4.4.5",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
]
